--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,8 +2,12 @@ name: blogpostvoting
 description: A simple Hello World Flutter app to vote Blogpost
 
 dependencies:
+  rxdart: ^0.16.0+2
   flutter:
     sdk: flutter
+
+  scoped_model: ^0.2.0
+  flutter_redux: ^0.5.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
