--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,6 +4,8 @@ description: A simple Hello World Flutter app to vote Blogpost
 dependencies:
   rxdart: ^0.16.0+2
   cloud_firestore: ^0.7.3
+  shared_preferences : ^0.4.2
+  tuple : ^1.0.0
   flutter:
     sdk: flutter
 
